Simplified cgit footer to fix horizontal scrollbar

--- a/modules/git/cgit.css
+++ b/modules/git/cgit.css
@@ -502,27 +502,10 @@ div#cgit span.deletions {
 }
 
 div#cgit div.footer {
-    margin-top: 0.5em;
-    text-align: center;
-    font-size:  80%;
-    /* For line overlapping */
-    position: relative;
-}
-div#cgit div.footer p.line-one,
-div#cgit div.footer p.line-two {
-    /* Makes lines overlap. */
-    position: absolute;
-    top:      0;
-    left:     0;
-    /* Marquee. */
-    animation: footerMarquee 9s linear infinite;
-}
-div#cgit div.footer p.line-one {
-    animation-delay: -4.5s;
-}
-@keyframes footerMarquee {
-    0%   { transform: translateX(100vw);  }
-    100% { transform: translateX(-100vw); }
+    margin-top:  0.5em;
+    text-align:  center;
+    font-size:   80%;
+    white-space: nowrap;
 }
 
 div#cgit a.branch-deco {
